--- a/Kos/index.html
+++ b/Kos/index.html
@@ -65,38 +65,46 @@
 					<div class="card-area">
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<img src="asset/shop-01.png" />
-							<div class="item-title">
-								<span class="item-name">noe vase</span>
-								<span class="item-price">$ 95</span>
-							</div>
+							<a href="#">
+								<img src="asset/shop-01.png" />
+								<div class="item-title">
+									<span class="item-name">noe vase</span>
+									<span class="item-price">$ 95</span>
+								</div>
+							</a>
 						</div>
 
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<img src="asset/shop-02.png" />
-							<div class="item-title">
-								<span class="item-name">vaie vase</span>
-								<span class="item-price">$ 80</span>
-							</div>
+							<a href="#">
+								<img src="asset/shop-02.png" />
+								<div class="item-title">
+									<span class="item-name">vaie vase</span>
+									<span class="item-price">$ 80</span>
+								</div>
+							</a>
 						</div>
 
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<img src="asset/shop-03.png" />
-							<div class="item-title">
-								<span class="item-name">bruke vase</span>
-								<span class="item-price">$ 70</span>
-							</div>
+							<a href="#">
+								<img src="asset/shop-03.png" />
+								<div class="item-title">
+									<span class="item-name">bruke vase</span>
+									<span class="item-price">$ 70</span>
+								</div>
+							</a>
 						</div>
 
 						<!-- 商品項目 -->
 						<div class="card-item">
-							<img src="asset/shop-04.png" />
-							<div class="item-title">
-								<span class="item-name">kol cup</span>
-								<span class="item-price">$ 20</span>
-							</div>
+							<a href="#">
+								<img src="asset/shop-04.png" />
+								<div class="item-title">
+									<span class="item-name">kol cup</span>
+									<span class="item-price">$ 20</span>
+								</div>
+							</a>
 						</div>
 
 					</div>
@@ -108,22 +116,59 @@
 			<div class="content-story areas">
 				<div class="story-image">
 					<img src="asset/about.png" />
+					<div>
+						<a href="#" class="link-border">our story</a>
+					</div>
 				</div>
 				<div class="story-description">
 					<div>
-					what started as a hobby<br />
-					and a way to pass time,<br />
-					evolved into a real passion.
-					<div>
-					<div style="margin-top: 40px;">
+						what started as a hobby<br />
+						and a way to pass time,<br />
+						evolved into a real passion.<br /><br />
 						<a href="#" class="link-border">our story</a>
 					</div>
 				</div>
 			</div>
 
-		</div>
-	</div>
+			<!-- 所有作品 -->
+			<div class="content-collections areas">
+				<h3>all collections</h3>
+				<div class="collections-area">
 
+					<!-- 作品類型 -->
+					<div class="collections">
+						<a href="#">
+							<img src="asset/collection-03.png" />
+							<span>painters & vase</span>
+						</a>
+					</div>
+
+					<div class="vertical-wrapper">
+						<!-- 作品類型 -->
+						<div class="collections">
+							<a href="#">
+								<img src="asset/collection-02.png" />
+								<span>tableware</span>
+							</a>
+						</div>
+
+						<!-- 作品類型 -->
+						<div class="collections">
+							<a href="#">
+								<img src="asset/collection-01.png" />
+								<span>decorative</span>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+
+
+	</div>
 
 	<!-- 頁尾區塊 -->
 	<div id="footer" class="footer">
