--- a/Kos/index.html
+++ b/Kos/index.html
@@ -133,46 +133,66 @@
 			<!-- 所有作品 -->
 			<div class="content-collections areas">
 				<h3>all collections</h3>
-				<div class="collections-area">
+				<div class="collections-scroll">
 
-					<!-- 作品類型 -->
-					<div class="collections">
-						<a href="#">
-							<img src="asset/collection-03.png" />
-							<span>painters & vase</span>
-						</a>
-					</div>
-
-					<div class="vertical-wrapper">
+					<div class="collections-area">
 						<!-- 作品類型 -->
 						<div class="collections">
 							<a href="#">
-								<img src="asset/collection-02.png" />
-								<span>tableware</span>
+								<img src="asset/collection-03.png" />
+								<span>painters & vase</span>
 							</a>
 						</div>
 
-						<!-- 作品類型 -->
-						<div class="collections">
-							<a href="#">
-								<img src="asset/collection-01.png" />
-								<span>decorative</span>
-							</a>
+						<div class="vertical-wrapper">
+							<!-- 作品類型 -->
+							<div class="collections">
+								<a href="#">
+									<img src="asset/collection-02.png" />
+									<span>tableware</span>
+								</a>
+							</div>
+							<!-- 作品類型 -->
+							<div class="collections">
+								<a href="#">
+									<img src="asset/collection-01.png" />
+									<span>decorative</span>
+								</a>
+							</div>
 						</div>
 
 					</div>
 				</div>
 			</div>
-
-
 		</div>
-
 
 	</div>
 
 	<!-- 頁尾區塊 -->
 	<div id="footer" class="footer">
-
+		<div class="wrapper">
+			<hr />
+			<ul>
+				<li><h3>navigate</h3></li>
+				<li><a href="#">shop</a></li>
+				<li><a href="#">account</a></li>
+				<li><a href="#">about</a></li>
+				<li><a href="#">contact</a></li>
+			</ul>
+			<ul>
+				<li><h3>help</h3></li>
+				<li><a href="#">shipping & delivery</a></li>
+				<li><a href="#">exchange & return</a></li>
+				<li><a href="#">terms & privacy</a></li>
+				<li><a href="#">faq</a></li>
+			</ul>
+			<ul>
+				<li><h3>social</h3></li>
+				<li><a href="#">facebook</a></li>
+				<li><a href="#">instagram</a></li>
+			</ul>
+		</div>
+		
 	</div>
 
 	<!-- JS -->
