--- a/Kos/index.html
+++ b/Kos/index.html
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 
-			<!-- 關於我們 -->
+			<!-- 品牌故事 -->
 			<div class="content-story areas">
 				<div class="story-image">
 					<img src="asset/about.png" />
