完成手機選單

--- a/Kos/index.html
+++ b/Kos/index.html
@@ -27,12 +27,42 @@
 				<li><a href="#">bag (0)</a></li>
 			</ul>
 			<!-- Mobile 選單項目 -->
-			<a href="#" class="mobile-bars">
+			<a href="#menu" class="mobile-bars">
 				<img src="asset/bars.png" />
 			</a>
 			<a href="#" class="mobile-bag">
 				<img src="asset/bag.png" />
 			</a>
+		</div>
+	</div>
+
+	<!-- 漢堡選單 -->
+	<div id="menu" class="burger-menu">
+		<div class="menu-wrapper">
+			<!-- 關閉按鈕 -->
+			<div class="menu-times">
+				<a href="#"><img src="asset/times.png" /></a>
+			</div>
+			<!-- 搜尋列 -->
+			<input class="menu-search" type="text" placeholder="search" />
+			<!-- 手機版選單 -->
+			<ul>
+				<li class="has-sub">
+					<a href="#">shop</a>
+				</li>
+				<li>
+					<a href="#">account</a>
+				</li>
+				<li>
+					<a href="#">about</a>
+				</li>
+				<li class="has-sub">
+					<a href="#">contact</a>
+				</li>
+				<li class="has-sub">
+					<a href="#">help</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 
@@ -172,25 +202,34 @@
 	<div id="footer" class="footer">
 		<div class="wrapper">
 			<hr />
-			<ul>
-				<li><h3>navigate</h3></li>
-				<li><a href="#">shop</a></li>
-				<li><a href="#">account</a></li>
-				<li><a href="#">about</a></li>
-				<li><a href="#">contact</a></li>
-			</ul>
-			<ul>
-				<li><h3>help</h3></li>
-				<li><a href="#">shipping & delivery</a></li>
-				<li><a href="#">exchange & return</a></li>
-				<li><a href="#">terms & privacy</a></li>
-				<li><a href="#">faq</a></li>
-			</ul>
-			<ul>
-				<li><h3>social</h3></li>
-				<li><a href="#">facebook</a></li>
-				<li><a href="#">instagram</a></li>
-			</ul>
+			<!-- 電腦版 (>= 576px) -->
+			<div class="footer-pc">
+				<ul>
+					<li><h3>navigate</h3></li>
+					<li><a href="#">shop</a></li>
+					<li><a href="#">account</a></li>
+					<li><a href="#">about</a></li>
+					<li><a href="#">contact</a></li>
+				</ul>
+				<ul>
+					<li><h3>help</h3></li>
+					<li><a href="#">shipping & delivery</a></li>
+					<li><a href="#">exchange & return</a></li>
+					<li><a href="#">terms & privacy</a></li>
+					<li><a href="#">faq</a></li>
+				</ul>
+				<ul>
+					<li><h3>social</h3></li>
+					<li><a href="#">facebook</a></li>
+					<li><a href="#">instagram</a></li>
+				</ul>
+			</div>
+
+			<!-- 手機板 (< 576px) -->
+			<div class="footer-mobile">
+				<a href="#"><img src="asset/facebook.png" /></a>
+				<a href="#"><img src="asset/instagram.png" /></a>
+			</div>
 		</div>
 		
 	</div>
