--- a/Kos/index.html
+++ b/Kos/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kos</title>
     <!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
@@ -236,6 +237,6 @@
 
 	<!-- JS -->
 	<script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
