--- a/Kos/index.html
+++ b/Kos/index.html
@@ -15,7 +15,7 @@
 		<div class="wrapper">
 			<!-- PC 選單項目 -->
 			<ul>
-				<li><a href="#">shop</a></li>
+				<li><a href="shop.html">shop</a></li>
 				<li><a href="#">about</a></li>
 				<li><a href="#">contact</a></li>
 			</ul>
@@ -28,12 +28,18 @@
 				<li><a href="#">bag (0)</a></li>
 			</ul>
 			<!-- Mobile 選單項目 -->
-			<a href="#menu" class="mobile-bars">
+			<a href="javascript:void(0)" class="mobile-bars" onclick="ShowBurgerMenu()">
+				<img src="asset/bars.png" />
+			</a>
+			<a href="javascript:void(0)" class="mobile-bag">
+				<img src="asset/bag.png" />
+			</a>
+			<!-- <a href="#menu" class="mobile-bars">
 				<img src="asset/bars.png" />
 			</a>
 			<a href="#" class="mobile-bag">
 				<img src="asset/bag.png" />
-			</a>
+			</a> -->
 		</div>
 	</div>
 
@@ -42,7 +48,8 @@
 		<div class="menu-wrapper">
 			<!-- 關閉按鈕 -->
 			<div class="menu-times">
-				<a href="#"><img src="asset/times.png" /></a>
+				<a href="javascript:void(0)" onclick="HideBurgerMenu()"><img src="asset/times.png" /></a>
+				<!-- <a href="#"><img src="asset/times.png" /></a> -->
 			</div>
 			<!-- 搜尋列 -->
 			<input class="menu-search" type="text" placeholder="search" />
@@ -238,5 +245,6 @@
 	<!-- JS -->
 	<script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
