--- a/Kos/index.html
+++ b/Kos/index.html
@@ -14,7 +14,7 @@
 	<div id="topbar" class="topbar">
 		<div class="wrapper">
 			<!-- PC 選單項目 -->
-			<ul>
+			<ul class="topbar-left">
 				<li><a href="shop.html">shop</a></li>
 				<li><a href="#">about</a></li>
 				<li><a href="#">contact</a></li>
@@ -22,7 +22,7 @@
 			<div class="topbar-logo">
 				<a href="index.html"><img src="asset/logo.png" /></a>
 			</div>
-			<ul>
+			<ul class="topbar-right">
 				<li><a href="#">account</a></li>
 				<li><a href="#">search</a></li>
 				<li><a href="#">bag (0)</a></li>
