--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -14,7 +14,7 @@
 	<div id="topbar" class="topbar">
 		<div class="wrapper">
 			<!-- PC 選單項目 -->
-			<ul>
+			<ul class="topbar-left">
 				<li><a href="shop.html" class="active">shop</a></li>
 				<li><a href="#">about</a></li>
 				<li><a href="#">contact</a></li>
@@ -22,7 +22,7 @@
 			<div class="topbar-logo">
 				<a href="index.html"><img src="asset/logo.png" /></a>
 			</div>
-			<ul>
+			<ul class="topbar-right">
 				<li><a href="#">account</a></li>
 				<li><a href="#">search</a></li>
 				<li><a href="#">bag (0)</a></li>
@@ -66,79 +66,87 @@
 			</ul>
 		</div>
 	</div>
-	
-	<!-- 商店標題 -->
-	<div class="shop-title">
-		<h3>planters & vases</h3>
-	</div>
 
-	<!-- 商品區塊 -->
-	<div class="shop-wrapper">
+	<div id="content" class="content">
 
-		<!-- 商品種類選單 -->
-		<!-- <div class="shop-menu">
-			<ul>
-				<li><a href="#">new in</a></li>
-				<li><a href="#">tableware</a></li>
-				<li class="has-sub">
-					<a href="#">planters & vases</a>
-					<ul>
-						<li><a href="#">planters</a></li>
-						<li><a href="#">vases</a></li>
+		<div class="wrapper">
+
+			<!-- 商店標題 -->
+			<div class="shop-title">
+				<h3>planters & vases</h3>
+			</div>
+
+			<!-- 商品區塊 -->
+			<div class="shop-wrapper">
+
+				<!-- 商品種類選單 -->
+				<div class="shop-menu">
+					<ul class="shop-list">
+						<li><a href="#">new in</a></li>
+						<li><a href="#">tableware</a></li>
+						<li class="has-sub">
+							<a href="#">planters & vases</a>
+							<ul>
+								<li><a href="#">planters</a></li>
+								<li><a href="#">vases</a></li>
+							</ul>
+						</li>
+						<li><a href="#">decorative</a></li>
 					</ul>
-				</li>
-				<li><a href="#">decorative</a></li>
-			</ul>
-		</div> -->
-
-		<!-- 商品陳列區塊 -->
-		<!-- <div class="shop-content"> -->
-
-			<!-- 商品排序 -->
-			<!-- <div class="product-sort">
-				<div>all</div>
-				<div>sort by</div>
-			</div> -->
-
-			<!-- 商品陳列 -->
-			<!-- <div class="product-area"> -->
-				
-				<!-- 商品項目 -->
-				<!-- <div class="product-item">
-					<a href="#">
-						<img src="asset/shop-01.png" />
-						<div class="product-title">
-							<span class="product-name">noe vase</span>
-							<span class="product-price">$ 95</span>
-						</div>
-					</a>
-				</div> -->
-
-				<!-- 商品項目 -->
-				<!-- <div class="product-item">
-					<a href="#">
-						<img src="asset/shop-01.png" />
-						<div class="product-title">
-							<span class="product-name">noe vase</span>
-							<span class="product-price">$ 95</span>
-						</div>
-					</a>
-				</div> -->
-
-				<!-- 商品項目 -->
-				<!-- <div class="product-item">
-					<a href="#">
-						<img src="asset/shop-01.png" />
-						<div class="product-title">
-							<span class="product-name">noe vase</span>
-							<span class="product-price">$ 95</span>
-						</div>
-					</a>
 				</div>
-			</div> -->
 
+				<!-- 商品陳列區塊 -->
+				<div class="shop-content">
+					123
 
-		<!-- </div> -->
+					<!-- 商品排序 -->
+					<!-- <div class="product-sort">
+						<div>all</div>
+						<div>sort by</div>
+					</div> -->
+
+					<!-- 商品陳列 -->
+					<!-- <div class="product-area"> -->
+						
+						<!-- 商品項目 -->
+						<!-- <div class="product-item">
+							<a href="#">
+								<img src="asset/shop-01.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div> -->
+
+						<!-- 商品項目 -->
+						<!-- <div class="product-item">
+							<a href="#">
+								<img src="asset/shop-01.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div> -->
+
+						<!-- 商品項目 -->
+						<!-- <div class="product-item">
+							<a href="#">
+								<img src="asset/shop-01.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div>
+					</div> -->
+
+				</div>
+
+			</div>
+
+		</div>
 
 	</div>
 
