商店電腦版

--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -85,7 +85,7 @@
 						<li><a href="#">new in</a></li>
 						<li><a href="#">tableware</a></li>
 						<li class="has-sub">
-							<a href="#">planters & vases</a>
+							<a href="#" class="active">planters & vases</a>
 							<ul>
 								<li><a href="#">planters</a></li>
 								<li><a href="#">vases</a></li>
@@ -97,41 +97,17 @@
 
 				<!-- 商品陳列區塊 -->
 				<div class="shop-content">
-					123
-
 					<!-- 商品排序 -->
-					<!-- <div class="product-sort">
-						<div>all</div>
-						<div>sort by</div>
-					</div> -->
+					<div class="product-toolbar">
+						<!-- <div class="product-all">all</div> -->
+						<a href="#" class="product-sort">sort by</a>
+					</div>
 
 					<!-- 商品陳列 -->
-					<!-- <div class="product-area"> -->
+					<div class="product-area">
 						
 						<!-- 商品項目 -->
-						<!-- <div class="product-item">
-							<a href="#">
-								<img src="asset/shop-01.png" />
-								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
-								</div>
-							</a>
-						</div> -->
-
-						<!-- 商品項目 -->
-						<!-- <div class="product-item">
-							<a href="#">
-								<img src="asset/shop-01.png" />
-								<div class="product-title">
-									<span class="product-name">noe vase</span>
-									<span class="product-price">$ 95</span>
-								</div>
-							</a>
-						</div> -->
-
-						<!-- 商品項目 -->
-						<!-- <div class="product-item">
+						<div class="product-item">
 							<a href="#">
 								<img src="asset/shop-01.png" />
 								<div class="product-title">
@@ -140,7 +116,63 @@
 								</div>
 							</a>
 						</div>
-					</div> -->
+
+						<!-- 商品項目 -->
+						<div class="product-item">
+							<a href="#">
+								<img src="asset/shop-02.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div>
+
+						<!-- 商品項目 -->
+						<div class="product-item">
+							<a href="#">
+								<img src="asset/shop-03.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div>
+
+						<!-- 商品項目 -->
+						<div class="product-item">
+							<a href="#">
+								<img src="asset/shop-01.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div>
+
+						<!-- 商品項目 -->
+						<div class="product-item">
+							<a href="#">
+								<img src="asset/shop-02.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div>
+
+						<!-- 商品項目 -->
+						<div class="product-item">
+							<a href="#">
+								<img src="asset/shop-03.png" />
+								<div class="product-title">
+									<span class="product-name">noe vase</span>
+									<span class="product-price">$ 95</span>
+								</div>
+							</a>
+						</div>
+
+					</div>
 
 				</div>
 
