商店頁面切版完成

--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -99,8 +99,8 @@
 				<div class="shop-content">
 					<!-- 商品排序 -->
 					<div class="product-toolbar">
-						<!-- <div class="product-all">all</div> -->
-						<a href="#" class="product-sort">sort by</a>
+						<div class="product-all"><a href="#">all</a></div>
+						<div class="product-sort"><a href="#">sort by</a></div>
 					</div>
 
 					<!-- 商品陳列 -->
@@ -108,7 +108,7 @@
 						
 						<!-- 商品項目 -->
 						<div class="product-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-01.png" />
 								<div class="product-title">
 									<span class="product-name">noe vase</span>
@@ -119,7 +119,7 @@
 
 						<!-- 商品項目 -->
 						<div class="product-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-02.png" />
 								<div class="product-title">
 									<span class="product-name">noe vase</span>
@@ -130,7 +130,7 @@
 
 						<!-- 商品項目 -->
 						<div class="product-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-03.png" />
 								<div class="product-title">
 									<span class="product-name">noe vase</span>
@@ -141,7 +141,7 @@
 
 						<!-- 商品項目 -->
 						<div class="product-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-01.png" />
 								<div class="product-title">
 									<span class="product-name">noe vase</span>
@@ -152,7 +152,7 @@
 
 						<!-- 商品項目 -->
 						<div class="product-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-02.png" />
 								<div class="product-title">
 									<span class="product-name">noe vase</span>
@@ -163,7 +163,7 @@
 
 						<!-- 商品項目 -->
 						<div class="product-item">
-							<a href="#">
+							<a href="product.html">
 								<img src="asset/shop-03.png" />
 								<div class="product-title">
 									<span class="product-name">noe vase</span>
@@ -171,19 +171,16 @@
 								</div>
 							</a>
 						</div>
-
+						
 					</div>
 
 				</div>
-
 			</div>
-
 		</div>
-
 	</div>
 
 	<!-- JS -->
-	<script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
+	<script type="text/javascript" src="plugins/jquery-3.7.0.min.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript" src="js/shop.js"></script>
 </body>
