--- a/Kos/index.html
+++ b/Kos/index.html
@@ -243,7 +243,7 @@
 	</div>
 
 	<!-- JS -->
-	<script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
+	<script type="text/javascript" src="plugins/jquery-3.7.0.min.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
