--- a/Kos/product.html
+++ b/Kos/product.html
@@ -69,6 +69,20 @@
 
 	<div id="content" class="content">
 
+		<!-- 商品圖片(大圖) -->
+		<div class="product-img">
+			<img src="asset/product.jpg" />
+		</div>
+
+		<!-- 商品描述區塊 -->
+		<div class="product-intro">
+			
+			<a href="shop.html" class="back-button">
+				<img src="asset/chevron-left.png" /> planters & vases
+			</a>
+
+		</div>
+
     </div>
 
     <!-- JS -->
