--- a/Kos/product.html
+++ b/Kos/product.html
@@ -77,9 +77,12 @@
 		<!-- 商品描述區塊 -->
 		<div class="product-intro">
 			
+			<!-- 返回按鈕 -->
 			<a href="shop.html" class="back-button">
 				<img src="asset/chevron-left.png" /> planters & vases
 			</a>
+
+			<!-- 商品標題 -->
 
 		</div>
 
