商品頁面RWD完成

--- a/Kos/index.html
+++ b/Kos/index.html
@@ -55,8 +55,11 @@
 			<input class="menu-search" type="text" placeholder="search" />
 			<!-- 手機版選單 -->
 			<ul>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
 				<li class="has-sub">
-					<a href="#">shop</a>
+					<a href="shop.html">shop</a>
 				</li>
 				<li>
 					<a href="#">account</a>
