--- a/Kos/product.html
+++ b/Kos/product.html
@@ -48,8 +48,11 @@
 			<input class="menu-search" type="text" placeholder="search" />
 			<!-- 手機版選單 -->
 			<ul>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
 				<li class="has-sub">
-					<a href="#">shop</a>
+					<a href="shop.html">shop</a>
 				</li>
 				<li>
 					<a href="#">account</a>
@@ -67,6 +70,7 @@
 		</div>
 	</div>
 
+	<!-- 頁面內容區塊 -->
 	<div id="content" class="content">
 
 		<!-- 商品圖片(大圖) -->
@@ -114,6 +118,12 @@
 				<div id="shipping" class="tab-content disabled">
 					If the product is returned within the seven-day appreciation period after receipt of the goods and returned within the appreciation period, it can be replaced with a new product or returned. If the product is not sent back within the seven-day hesitation period (appreciation period), no return or exchange will be accepted.
 				</div>
+
+				<!-- 手機版介紹 -->
+				<div class="tab-content-mobile">
+					noe vase is handmade with clay, inspired by the nordic nature and color tones. Due to their handmade nature, each bowl is unique in shape and size.
+				</div>
+
 			</div>
 
 			<!-- 商品選購 -->
@@ -149,6 +159,25 @@
 		</div>
 
     </div>
+
+	<!-- (手機版)加入購物車提示區塊 -->
+	<div id="hint" class="content hint-bg">
+		<!-- 提示區塊 -->
+		<div class="cart-hint">
+			<!-- 標題文字 -->
+			<div class="cart-hint-title">
+
+			</div>
+			<!-- 加入項目 -->
+			<div class="cart-hint-item">
+
+			</div>
+			<!-- 查看購物車 -->
+			<div class="cart-hint-view">
+
+			</div>
+		</div>
+	</div>
 
     <!-- JS -->
 	<script type="text/javascript" src="plugins/jquery-3.7.0.min.js"></script>
