--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -48,8 +48,11 @@
 			<input class="menu-search" type="text" placeholder="search" />
 			<!-- 手機版選單 -->
 			<ul>
+				<li>
+					<a href="index.html">Home</a>
+				</li>
 				<li class="has-sub">
-					<a href="#">shop</a>
+					<a href="shop.html">shop</a>
 				</li>
 				<li>
 					<a href="#">account</a>
@@ -82,16 +85,16 @@
 				<!-- 商品種類選單 -->
 				<div class="shop-menu">
 					<ul class="shop-list">
-						<li><a href="#">new in</a></li>
-						<li><a href="#">tableware</a></li>
+						<li><a href="shop.html">new in</a></li>
+						<li><a href="shop.html">tableware</a></li>
 						<li class="has-sub">
-							<a href="#" class="active">planters & vases</a>
+							<a href="shop.html" class="active">planters & vases</a>
 							<ul>
-								<li><a href="#">planters</a></li>
-								<li><a href="#">vases</a></li>
+								<li><a href="shop.html">planters</a></li>
+								<li><a href="shop.html">vases</a></li>
 							</ul>
 						</li>
-						<li><a href="#">decorative</a></li>
+						<li><a href="shop.html">decorative</a></li>
 					</ul>
 				</div>
 
