--- a/Kos/shop.html
+++ b/Kos/shop.html
@@ -25,7 +25,7 @@
 			<ul class="topbar-right">
 				<li><a href="#">account</a></li>
 				<li><a href="#">search</a></li>
-				<li><a href="#">bag (0)</a></li>
+				<li><a href="#">bag (<span id="pc-cart">0</span>)</a></li>
 			</ul>
 			<!-- Mobile 選單項目 -->
 			<a href="javascript:void(0)" class="mobile-bars" onclick="ShowBurgerMenu()">
@@ -33,6 +33,7 @@
 			</a>
 			<a href="javascript:void(0)" class="mobile-bag">
 				<img src="asset/bag.png" />
+				<span class="badge-cart">(<span id="mobile-cart">0</span>)</span>
 			</a>
 		</div>
 	</div>
