購物車RWD完成

--- a/Kos/index.html
+++ b/Kos/index.html
@@ -25,7 +25,7 @@
 			<ul class="topbar-right">
 				<li><a href="#">account</a></li>
 				<li><a href="#">search</a></li>
-				<li><a href="#">bag (<span id="pc-cart">0</span>)</a></li>
+				<li><a href="javascript:void(0)" onclick="ShowCartDetail()">bag (<span id="pc-cart">0</span>)</a></li>
 			</ul>
 			<!-- Mobile 選單項目 -->
 			<a href="javascript:void(0)" class="mobile-bars" onclick="ShowBurgerMenu()">
@@ -83,7 +83,7 @@
 		<div class="wrapper">
 			<div class="slider-title">
 				<h2>new<br />collection</h2>
-				<h3><a href="#">shop</a></h3>
+				<h3><a href="shop.html">shop</a></h3>
 			</div>
 		</div>
 	</div>
@@ -180,7 +180,7 @@
 					<div class="collections-area">
 						<!-- 作品類型 -->
 						<div class="collections">
-							<a href="#">
+							<a href="shop.html">
 								<img src="asset/collection-03.png" />
 								<span>painters & vase</span>
 							</a>
@@ -218,7 +218,7 @@
 			<div class="footer-pc">
 				<ul>
 					<li><h3>navigate</h3></li>
-					<li><a href="#">shop</a></li>
+					<li><a href="shop.html">shop</a></li>
 					<li><a href="#">account</a></li>
 					<li><a href="#">about</a></li>
 					<li><a href="#">contact</a></li>
@@ -244,6 +244,73 @@
 			</div>
 		</div>
 		
+	</div>
+
+	<!-- 購物車 -->
+	<div id="cart-panel" class="content">
+		<!-- 標題文字 -->
+		<div class="cart-head">
+			<!-- 關閉按鈕 -->
+			<div class="cart-times">
+				<a href="javascript:void(0)" onclick="HideCartDetail()"><img src="asset/times.png" /></a>
+			</div>
+
+			<!-- 標題 -->
+			<div class="cart-title">
+				bag
+			</div>
+		</div>
+
+		<!-- 購物車內容 -->
+		<div class="cart-body">
+			<table class="cart-table">
+				<tbody>
+					<tr>
+						<td>
+							<div class="cart-column1">
+								<div class="cart-img-cover">
+									<img src="asset/shop-01.png" />
+								</div>
+							</div>
+							<div class="cart-column2">
+								<div class="cart-name">noe vase</div>
+								<!-- 商品數量選擇 -->
+								<div class="cart-count">
+									<!-- 減少數量 -->
+									<div>
+										<a href="javascript:void(0)" onclick="ReduceCartNumber(1)">
+											<img class="minus-icon" src="asset/minus.png" />
+										</a>
+									</div>
+									<!-- 數量 -->
+									<div class="number-label">
+										<label id="number-1" class="cart-number">1</label>
+									</div>
+									<!-- 增加數量 -->
+									<div>
+										<a href="javascript:void(0)" onclick="IncreaseCartNumber(1)">
+											<img class="plus-icon" src="asset/plus.png" />
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="cart-column3">
+								<div class="cart-price">$ 95</div>
+								<div class="cart-remove">
+									<a href="javascript:void(0)" onclick="RemoveCartItem()"><img src="asset/trash.png" /></a>
+								</div>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<!-- 結帳 -->
+		<div class="cart-footer">
+
+		</div>
+
 	</div>
 
 	<!-- JS -->
